# intelligient-pdf-parser

./: .gitignore  .gitmodules  .windsurfrules  1.10321_2024_ValTR_unep_gef_msp_pivot.xlsx  READMD.md  README.md  config.py  database.db  main_find_table.py  main_parse_pdfs.py  pyproject.toml
alembic/: env.py
alembic/versions/: 038f0b77354f_paper_added_page_span.py  16839edabb74_added_paper_model.py  303b86e905b4_init.py  36eb0fa9e3ee_added_candidate_table_model.py  3a4d07a8c5cd_candidate_table_add_headers.py  46808c5b1049_paper_refactor_fields.py  595797dd5a9f_paper_fixed.py  87878f444073_paper_added_merged_criterion_table.py  a242690f5edf_paper_refactor_fields.py  ac41b18384f4_paper_added_publish_month.py  e52c42a09ed5_paper_added_merged_count.py
data/: tables.xlsx  tables_pivot.xlsx  terminal-evaluation-report_0.1.0.xlsx  terminal-evaluation-report_0.1.0_pivot.xlsx  terminal-evaluation-report_0.1.0_stat.xlsx
docs/: analysis.md  notes.md
models/: paper.py
scripts/: clean_merged_criterion_table.py  temp.py  test_null_other_fields.py  visualization_of_find_tables.py
src/: config.py  database.py  ensure_table.py  log.py  models.py  pdf_parser.py  table_finder.py
src/pdf_parser/: search_text.py  table.py
src/utils/: dataframe.py  find_longest_subsequence.py  format_merged_cells_table.py  preprocess_table.py  pretty_df.py
src/v1_plain/: main_extract_tables.py  main_find_next_table.py  (+6 more)
v1_plain/: Untitled.ipynb  ensure_table.py  format_text.py  main_extract_tables.py  main_find_table.py  main_parse_pdfs.py  main_table.py
v2/: run_claude.py  run_gemini.py
(+27 files in other folders)
