[tool.poetry]
name = "pdf-parser"
version = "0.1.0"
description = ""
authors = ["markshawn2020 <shawninjuly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
loguru = "^0.7.2"
pillow = "^10.4.0"
python = "^3.11"
sqlmodel = "^0.0.22"
anthropic = "^0.39.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
pymupdf = "^1.24.13"
sentence-transformers = "^3.3.0"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
rich = "^13.9.4"
openpyxl = "^3.1.5"
google-generativeai = "^0.8.3"
tabulate = "^0.9.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

